Fix mistake in generate password program

--- a/random-password-generator/index.html
+++ b/random-password-generator/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Random Number Generator</h1>
+    <h1>Random Password Generator</h1>
     <div id="textBoxs">
         <label for="lengthTextBox" id="labelLength">Enter length:</label>
         <input type="number" value="1" min="1" max="20" id="lengthTextBox"><br><br>
