Add weather forecast program

--- a/fetch-pokemon/index.html
+++ b/fetch-pokemon/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <input type="text" id="pokemonValue" placeholder="Enter pokemon name">
-    <button type="submit" id="btn" onclick="fetchData()">Fetch Pokemon</button>
+    <button id="btn" onclick="fetchData()">Fetch Pokemon</button>
     <img src="" alt="picture" id="picture" style="display: none;">
     <script src="script.js"></script>
 </body>
